deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-deploy
  labels:
    part-of: test-deploy
    managed-by: kubectl
