deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test-deploy
  name: test-server-1
  labels:
    part-of: test-deploy
    component: backend-server
    name: test-deploy
    instance: test-server-1
    version: 1.0.0
    managed-by: kubectl
spec:
  selector:
    part-of: test-deploy
    component: backend-server
    name: test-server
    instance: test-server-1
  ports:
    - port: 80
      targetPort: http
      nodePort: 32121
  type: NodePort
